Test JNI application.